maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:43: error: '=' expected but '(' found.
def fini(H:Int,L:Int):Boolean()={
                             ^ShortestPathMaze:56: error: illegal start of simple expression
def ecrireAdj(x:Int,y:Int){
^